...
	func withAppRouter() -> some View {
		navigationDestination(for: RouterDestination.self) { destination in
			switch destination {
			case .myProfile:
				MyProfileView()
			case .shopList:
				ShopListView()
			case .bookmarks:
				BookmarkListView()
			case .likes:
				LikeListView()
			case .coupons:
				CouponsView()
...
